--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,19 @@
 </head>
 
 <body>
+  <div class="container">
+    <h1>Модули</h1>
+    <p>import {a, b as c} from './file';</p>
+    <p>import X from './file';</p>
+    <p>import * as lib from './file';</p>
 
+    <p>
+      export {a, b, c as d}
+    </p>
+    <p>
+      export default Z;
+    </p>
+  </div>
 </body>
 
 </html>
