--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   <title>ECMAScript</title>
 </head>
 
@@ -21,6 +22,10 @@
     <p>
       export default Z;
     </p>
+
+    <h3>Get Random Joke</h3>
+    <div id="joke" class="joke"></div>
+    <div id="tags" class="tags"></div>
   </div>
 </body>
 
