--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,18 @@
     <h3>Get Random Joke</h3>
     <div id="joke" class="joke"></div>
     <div id="tags" class="tags"></div>
+
+    <h2>ES6 features</h2>
+    <p>const and let</p>
+    <p>arrow functions</p>
+    <p>default parameters' values</p>
+    <p>spread operator</p>
+    <p>destructing</p>
+    <p>template literals</p>
+    <p>enhanced object properties</p>
+    <p>modules</p>
+    <p>classes</p>
+    <p>etc...</p>
   </div>
 </body>
 
