--- a/index.html
+++ b/index.html
@@ -65,8 +65,16 @@
     <p>includes</p>
     <p>slice</p>
     <p>sort</p>
+    <hr>
     <p>join</p>
     <p>map</p>
+    <p>Click the button to get the square root of each element in the array [4, 9, 16, 25].</p>
+    <button type="button" id="button1" class="button1">Square root</button>
+    <p id="squareRoot"></p>
+    <p>Get the full name for each person in the array.</p>
+    <button type="button" id="button2" class="button1">Full name</button>
+    <p id="fullname"></p>
+    <hr>
     <p>reduce / reduceRight</p>
   </div>
 <script src="main.js"></script></body>
